Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16441

Wrong clang static analyzer command line

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 4.4.1
    • Qt Creator 4.0.0, Qt Creator 4.4.0-rc1
    • None
    • Windows 7 64-bit, Qt-Creator 4, Mingw32, Qt-4.8.5

      CppTools plug-in forms wrong command line for clang static analyzer.
      Look at the screenshots.

        1. bug.png
          137 kB
          far-far
        2. compilers.png
          59 kB
          far-far
        3. kits.png
          78 kB
          far-far
        4. qt_versions.png
          60 kB
          far-far
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            yvvan Ivan Donchevskii
            far-far far-far
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes